--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,22 @@
   <meta charset="utf-8">
   <title>Ng4Structure</title>
   <base href="/">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+  .pagination-page[_ngcontent-c5]{
+width:auto !important;
+}
+.column-header {background-color: #008197; color:#fff;}
+[_nghost-c2] .row-odd {background-color: #e6e7e9 !important;}
+.data-table {margin-top: 5px;}
+.data-table-header  {display: none;}
+.column-title {width:500px;}
+.column-title a:link, .column-title a:visited {color: #008197}
+.btn-default {background-color: #008197 !important;; color:#fff !important;}
+
+</style>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
